XO_Project_UAT/Project--XOGrp--UAT/src/objects/Live_Subscription_Product_and_Charge__c.object
<CustomObject>
    <fields>
        <fullName>Amement_Type__c</fullName>
        <label>Amendment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BoB_Value__c</fullName>
        <description>CSP-3384</description>
        <formula>CASE(Product_Type__c,
 &apos;Internet&apos;, Zuora_MonthlyRecurringRevenue__c, 
 &apos;Print&apos;, Zuora_TotalContractValue__c,
 &apos;Direct Mail&apos;,Zuora_TotalContractValue__c,
 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BoB Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category_Taxonomy_ID__c</fullName>
        <label>Category Taxonomy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Line_Item_Status__c</fullName>
        <formula>IF(OR(CONTAINS(Name,&apos;#&apos; ),Name=&apos;CES Charge Migrated&apos;),
  &apos;Migrated&apos;,
  IF(NOT(Live_Subscription__r.Post_Is_Valid_Subscription__c), 
    &apos;Invalid&apos;,
    IF(Product_Type__c=&apos;Internet&apos;,
    If( And(Amement_Type__c=&apos;Remove Product&apos;,Zuora_EffectiveStartDate__c &gt;= Zuora_EffectiveEndDate__c),
      &apos;Removed&apos;,
      If(today()&lt;Zuora_EffectiveStartDate__c, 
        &apos;Pending&apos;,
        If(today()&lt;Zuora_EffectiveEndDate__c, 
          &apos;Live&apos;,
          If(Live_Subscription__r.Post_Zuora_Status__c=&apos;Cancelled&apos;, 
            &apos;Cancelled&apos;, 
            If( Amement_Type__c=&apos;Remove Product&apos;, 
              &apos;Removed&apos;,
              &apos;Expired&apos;
            ) 
          )
        )
      )
    ),    
      IF(Product_Type__c=&apos;Direct Mail&apos;,
        If(Live_Subscription__r.Post_Zuora_Status__c=&apos;Cancelled&apos;,
            &apos;Cancelled&apos;, 
      IF(Amement_Type__c=&apos;Remove Product&apos;, 
        &apos;Removed&apos;,
        If( OR(
            And(year(LDE_Email_Launch_Date__c)= year(today()),month(LDE_Email_Launch_Date__c)= month(today()),day(today())&gt;=2, day(LDE_Email_Launch_Date__c)&gt;1),
            And(year(AddMonths(LDE_Email_Launch_Date__c,1))= year(today()),month(AddMonths(LDE_Email_Launch_Date__c,1))= month(today()),day(today())=1,day(LDE_Email_Launch_Date__c)&gt;1 ),
            And(today()= LDE_Email_Launch_Date__c, day(LDE_Email_Launch_Date__c)=1),
            And(year(AddMonths(LDE_Email_Launch_Date__c,-1))= year(today()),month(AddMonths(LDE_Email_Launch_Date__c,-1))= month(today()),day(today())&gt;1,day(LDE_Email_Launch_Date__c)=1 )
          ), 
          &apos;Live&apos;,
          If( today() &lt; LDE_Email_Launch_Date__c, 
            &apos;Pending&apos;,
            &apos;Expired&apos;
          )
        )
      )
        ),
        IF(Product_Type__c =&apos;Print&apos;,
           IF(Live_Subscription__r.Post_Zuora_Status__c=&apos;Cancelled&apos;,
              &apos;Cancelled&apos;, 
        IF(Amement_Type__c=&apos;Remove Product&apos;, 
        &apos;Removed&apos;,
        If( OR(
            And(year(X1st_Cover_Date__c)= year(today()),month(X1st_Cover_Date__c)= month(today()),day(today())&gt;=2, day(X1st_Cover_Date__c)&gt;1),
            And(year(AddMonths(X1st_Cover_Date__c,1))= year(today()),month(AddMonths(X1st_Cover_Date__c,1))= month(today()),day(today())=1,day(X1st_Cover_Date__c)&gt;1 ),
            And(today()= X1st_Cover_Date__c, day(X1st_Cover_Date__c)=1),
            And(year(AddMonths(X1st_Cover_Date__c,-1))= year(today()),month(AddMonths(X1st_Cover_Date__c,-1))= month(today()),day(today())&gt;1,day(X1st_Cover_Date__c)=1 )
          ), 
          &apos;Live&apos;,
          IF(today() &lt; X1st_Cover_Date__c, 
          &apos;Pending&apos;,
          &apos;Expired&apos;
          )
        )
        )
          )
          ,&quot;Unknown&quot;
        )
      )
    )
  )
)</formula>
        <label>Commission Line Item Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <formula>IF(
AND(
TODAY()&lt;Switch_Date__c, Amement_Type__c!=&apos;Add Product&apos;),
Pre_Discount_Percentage__c, 
Post_Discount_Percentage__c)</formula>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Reason__c</fullName>
        <formula>IF(AND(TODAY()&lt;Switch_Date__c, Amement_Type__c!=&apos;Add Product&apos;),
TEXT(Pre_Discount_Reason__c), 
TEXT(Post_Discount_Reason__c))</formula>
        <label>Discount Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Email_Notification_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error Email Notification Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LDE_Email_Launch_Date__c</fullName>
        <label>LDE Email Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <formula>IF(AND(TODAY()&lt;Switch_Date__c,Amement_Type__c!=&apos;Add Product&apos;), Pre_List_Price__c, Post_List_Price__c)</formula>
        <label>List Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Price__c</fullName>
        <formula>IF(Commission_Line_Item_Status__c=&apos;Live&apos;,
  IF(Product_Type__c =&apos;Internet&apos;, 
      Zuora_MonthlyRecurringRevenue__c,
      Zuora_TotalContractValue__c),
     null)</formula>
        <label>Live $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live_Subscription__c</fullName>
        <label>Live Subscription</label>
        <referenceTo>Live_Subscription__c</referenceTo>
        <relationshipLabel>Live Subscription Product and Charges</relationshipLabel>
        <relationshipName>Live_Subscription_Product_and_Charges</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Market_ID__c</fullName>
        <label>Market ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mock_Status__c</fullName>
        <formula>IF(OR(CONTAINS(Name,&apos;#&apos; ),Name=&apos;CES Charge Migrated&apos;),
  &apos;Migrated&apos;,
  IF(NOT(Live_Subscription__r.Post_Is_Valid_Subscription__c), 
    &apos;Invalid&apos;,
    IF(Product_Type__c=&apos;Internet&apos;,
      If(Mock_Today__c&lt;Zuora_EffectiveStartDate__c, 
        &apos;Pending&apos;,
        If(Mock_Today__c&lt;Zuora_EffectiveEndDate__c, 
      &apos;Live&apos;,
      If(Live_Subscription__r.Post_Zuora_Status__c=&apos;Cancelled&apos;, 
        &apos;Cancelled&apos;, 
        If( Amement_Type__c=&apos;Remove Product&apos;, 
          &apos;Removed&apos;,
          &apos;Expired&apos;
        ) 
      )
        )
      ),  
      IF(Product_Type__c=&apos;Direct Mail&apos;,
        If(Live_Subscription__r.Post_Zuora_Status__c=&apos;Cancelled&apos;,
            &apos;Cancelled&apos;, 
      IF(Amement_Type__c=&apos;Remove Product&apos;, 
        &apos;Removed&apos;,
        If( OR(
            And(year(LDE_Email_Launch_Date__c)= year(Mock_Today__c),month(LDE_Email_Launch_Date__c)= month(Mock_Today__c),day(Mock_Today__c)&gt;=2, day(LDE_Email_Launch_Date__c)&gt;1),
            And(year(AddMonths(LDE_Email_Launch_Date__c,1))= year(Mock_Today__c),month(AddMonths(LDE_Email_Launch_Date__c,1))= month(Mock_Today__c),day(Mock_Today__c)=1,day(LDE_Email_Launch_Date__c)&gt;1 ),
            And(Mock_Today__c= LDE_Email_Launch_Date__c, day(LDE_Email_Launch_Date__c)=1),
            And(year(AddMonths(LDE_Email_Launch_Date__c,-1))= year(Mock_Today__c),month(AddMonths(LDE_Email_Launch_Date__c,-1))= month(Mock_Today__c),day(Mock_Today__c)&gt;1,day(LDE_Email_Launch_Date__c)=1 )
          ), 
          &apos;Live&apos;,
          If( Mock_Today__c &lt; LDE_Email_Launch_Date__c, 
            &apos;Pending&apos;,
            &apos;Expired&apos;
          )
        )
      )
        ),
        IF(Product_Type__c =&apos;Print&apos;,
           IF(Live_Subscription__r.Post_Zuora_Status__c=&apos;Cancelled&apos;,
              &apos;Cancelled&apos;, 
        IF(Amement_Type__c=&apos;Remove Product&apos;, 
        &apos;Removed&apos;,
        If( OR(
            And(year(X1st_Cover_Date__c)= year(Mock_Today__c),month(X1st_Cover_Date__c)= month(Mock_Today__c),day(Mock_Today__c)&gt;=2, day(X1st_Cover_Date__c)&gt;1),
            And(year(AddMonths(X1st_Cover_Date__c,1))= year(Mock_Today__c),month(AddMonths(X1st_Cover_Date__c,1))= month(Mock_Today__c),day(Mock_Today__c)=1,day(X1st_Cover_Date__c)&gt;1 ),
            And(Mock_Today__c= X1st_Cover_Date__c, day(X1st_Cover_Date__c)=1),
            And(year(AddMonths(X1st_Cover_Date__c,-1))= year(Mock_Today__c),month(AddMonths(X1st_Cover_Date__c,-1))= month(Mock_Today__c),day(Mock_Today__c)&gt;1,day(X1st_Cover_Date__c)=1 )
          ), 
          &apos;Live&apos;,
          IF(Mock_Today__c &lt; X1st_Cover_Date__c, 
          &apos;Pending&apos;,
          &apos;Expired&apos;
          )
        )
        )
          )
          ,&quot;Unknown&quot;
        )
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mock Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mock_Today__c</fullName>
        <label>Mock Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Discount_Percentage__c</fullName>
        <label>Post Discount Percentage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Post_Discount_Reason__c</fullName>
        <label>Post Discount Reason</label>
        <picklist>
            <picklistValues>
                <fullName>None-Autocalculated Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Freeze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSD Discretionary Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedding Wire Switch Pitch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blitz</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_List_Price__c</fullName>
        <label>Post List Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_RSD_Id__c</fullName>
        <label>Post RSD Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_SalesRepID__c</fullName>
        <label>Post SalesRepID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Zuora_MonthlyRecurringRevenue__c</fullName>
        <label>Post Zuora MonthlyRecurringRevenue</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Post_Zuora_Price__c</fullName>
        <label>Post Zuora Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Post_Zuora_TotalContractValue__c</fullName>
        <label>Post Zuora TotalContractValue</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Discount_Percentage__c</fullName>
        <label>Pre Discount Percentage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pre_Discount_Reason__c</fullName>
        <label>Pre Discount Reason</label>
        <picklist>
            <picklistValues>
                <fullName>None-Autocalculated Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Freeze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSD Discretionary Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedding Wire Switch Pitch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blitz</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_List_Price__c</fullName>
        <label>Pre List Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_RSD_Id__c</fullName>
        <label>Pre RSD Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_SalesRepID__c</fullName>
        <label>Pre SalesRepID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Zuora_MonthlyRecurringRevenue__c</fullName>
        <label>Pre Zuora MonthlyRecurringRevenue</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Zuora_Price__c</fullName>
        <label>Pre Zuora Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Zuora_TotalContractValue__c</fullName>
        <label>Pre Zuora TotalContractValue</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Print_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Print Issue</label>
        <referenceTo>Print_Issue__c</referenceTo>
        <relationshipLabel>PrintIssue1</relationshipLabel>
        <relationshipName>PrintIssue1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSDId__c</fullName>
        <formula>IF(AND(TODAY()&lt;Switch_Date__c,Amement_Type__c!=&apos;Add Product&apos;), Pre_RSD_Id__c, Post_RSD_Id__c)</formula>
        <label>RSD Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Name__c</fullName>
        <label>Rate Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_ID__c</fullName>
        <formula>IF(AND(TODAY()&lt;Switch_Date__c,Amement_Type__c!=&apos;Add Product&apos;), Pre_SalesRepID__c, Post_SalesRepID__c)</formula>
        <label>Sales Rep ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Product_and_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Product and Charge</label>
        <referenceTo>Zuora__SubscriptionProductCharge__c</referenceTo>
        <relationshipLabel>Live Subscription Product and Charges</relationshipLabel>
        <relationshipName>Live_Subscription_Product_and_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Version__c</fullName>
        <label>Subscription Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Switch_Date__c</fullName>
        <label>Switch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Cover_Date__c</fullName>
        <label>1st cover date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Live Charges</relationshipLabel>
        <relationshipName>Live_Subscription_Product_and_Charges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zuora_CancelledDate__c</fullName>
        <formula>Live_Subscription__r.Zuora_CancelledDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora_ChargeNumber__c</fullName>
        <externalId>true</externalId>
        <label>Zuora Charge Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora_EffectiveEndDate__c</fullName>
        <label>Zuora EffectiveEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora_EffectiveStartDate__c</fullName>
        <label>Zuora EffectiveStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora_MonthlyRecurringRevenue__c</fullName>
        <formula>IF(AND(TODAY()&lt;Switch_Date__c,Amement_Type__c!=&apos;Add Product&apos;), Pre_Zuora_MonthlyRecurringRevenue__c, Post_Zuora_MonthlyRecurringRevenue__c)</formula>
        <label>Zuora MonthlyRecurringRevenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora_Price__c</fullName>
        <formula>IF(AND(TODAY()&lt;Switch_Date__c,Amement_Type__c!=&apos;Add Product&apos;), Pre_Zuora_Price__c, Post_Zuora_Price__c)</formula>
        <label>Zuora Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora_Product_Name_Test__c</fullName>
        <formula>Zuora_Product_Name__c</formula>
        <label>Zuora Product Name Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_Product_Name__c</fullName>
        <label>Zuora Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_TotalContractValue__c</fullName>
        <formula>IF(AND(TODAY()&lt;Switch_Date__c,Amement_Type__c!=&apos;Add Product&apos;), Pre_Zuora_TotalContractValue__c ,Post_Zuora_TotalContractValue__c)</formula>
        <label>Zuora TotalContractValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Live Subscription Product and Charge</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>X1st_Cover_Date__c</columns>
        <columns>Zuora_Account__c</columns>
        <columns>Amement_Type__c</columns>
        <columns>Category_Taxonomy_ID__c</columns>
        <columns>Commission_Line_Item_Status__c</columns>
        <columns>Discount_Percentage__c</columns>
        <columns>Discount_Reason__c</columns>
        <columns>List_Price__c</columns>
        <columns>Live_Price__c</columns>
        <columns>Live_Subscription__c</columns>
        <columns>Pre_List_Price__c</columns>
        <columns>Print_Issue__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Live Subscription Product and Charge</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Live Subscription Product and Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>